@@ -1,3 +1,5 @@
+JG-2003-05-27-0: Bugfix:    Type mismatch in (compiler warning) in featureset.
+
 SG-2003-05-27-0: Testsuite: - removed error message with maintrunk
                               removed unused macro call 
                               "REFERENCED_IN_QUEUE_LIST_OF_CHECKPOINT"
